# template-corba-omniorb

./: .gitignore  CMakeLists.txt  README.md  TODO.md  toolbox.sh
cmake/: FindOmniORB.cmake  OmniORBConfig.cmake
include/: CMakeLists.txt
src/: CMakeLists.txt  hello.cpp  hello.hh  hello.idl  helloSK.cc  hello_client.cpp  hello_server.cpp
